--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="hero">
-            <img src="images/spacex.jpg" id="main-logo">
+            <img src="spacex.jpg" id="main-logo">
             <h1 class="futurefont">Join the <span class= underline>exploration</span></h1>
             <button class="btn">Apply</button>
 
